--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,10 @@ repositories {
 dependencies {
     implementation 'com.amazonaws:aws-lambda-java-core:1.2.1'
     implementation 'org.slf4j:slf4j-nop:2.0.6'
+    implementation 'com.amazonaws:aws-java-sdk-secretsmanager:1.12.780'
+    implementation 'org.hyperledger.fabric-sdk-java:fabric-sdk-java:2.2.6'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 test {
