--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,18 @@
       <artifactId>slf4j-nop</artifactId>
       <version>2.0.6</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-secretsmanager</artifactId>
+      <version>1.12.780</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hyperledger.fabric-sdk-java</groupId>
+      <artifactId>fabric-sdk-java</artifactId>
+      <version>2.2.6</version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
