--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,12 @@
     <dependency>
       <groupId>org.hyperledger.fabric-sdk-java</groupId>
       <artifactId>fabric-sdk-java</artifactId>
-      <version>2.2.6</version>
+      <version>1.4.7</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <version>2.0.0.Final</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
